--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ project/target/*
 target/scala-2.13/resolution-cache/*
 target/streams/*
 target/scala-2.13/classes/*
+target/scala-2.13/resolution-cache/*
