--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ project/target/*
 target/streams/*
 target/scala-2.13/classes/*
 target/scala-2.13/resolution-cache/*
+target/.history
+target/scala-2.13/test-classes/*
+target/test-reports/*
+
