Refactor JSON Parser to match result without Entities

--- a/src/main/resources/atlas-config.yaml
+++ b/src/main/resources/atlas-config.yaml
@@ -5,3 +5,4 @@ attribute.qualifiedName: Qualified Name
 displayText: Display Text
 status: Status
 attribute.createTime: Create Time
+classificationNames: Classification Names
